# homelab

./: .dockerignore  .editorconfig  .gitignore  Brewfile  CHANGELOG.md  LICENSE.txt  Makefile  README.md  docker-compose.yml  renovate.json
.circleci/: config.yml
.config/: .codespellrc  .dockerfilelintrc  .hadolint.yaml  .htmllintrc  .markdown-link-check.json  .mdl_style.rb  .mega-linter.yml  .proselintrc  ansible-lint.yml  biome.json  lychee.toml  pyproject.toml  zizmor.yml
.github/: dependabot.yml
.github/workflows/: docker-build.yml  lint.yml  (+2 more)
.utils/: backup-entrypoint.sh  certs.sh  install-machine.sh  install-service.sh  install.sh  preinstall-all.sh  run-cron.sh  test-pihole.sh
ansible/: README.md  ansible.cfg  hosts.yml
docker-apps/: README.md
docker-compose/: README.md
docker-images/.shared/healthchecks/http-healthcheck-1/: Cargo.toml  README.md
docker-images/.shared/healthchecks/http-healthcheck-1/src/: main.rs
docs/: Checklist for new docker-apps.md
guides/: Any - Install docker.md  Connect to macvlan containers.md  Raspberry Pi - Install OS.md  Raspberry Pi - OS install.md
icons/: .build-utils.sh  README.md  build-apache.sh  build-diagrams.sh  build-favicons.sh  build-healthchecks.sh  build-homepage.sh  build-homer.sh  build-http-proxy.sh  build-lamps.sh  build-smtp4dev.sh  build.sh  gitman.yml  package-lock.json  package.json  prebuild.sh
maintenance/: README.md
servers/: .gitignore  helper.sh  main.sh
tests/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  secrets.sh  tsconfig.json
(+2310 files in other folders)
